Enhance account service with custom exceptions, improve validation, and add transaction management documentation